--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
     "@types/chalk": "^2.2.4",
     "chalk": "^5.4.1"
   },
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "repository": "https://npm.pkg.github.com"
 }
