--- a/package.json
+++ b/package.json
@@ -13,5 +13,5 @@
     "chalk": "^5.4.1"
   },
   "version": "0.0.1",
-  "repository": "https://npm.pkg.github.com"
+  "repository":"https://github.com/iglu-sh/logger"
 }
