--- a/package.json
+++ b/package.json
@@ -13,9 +13,5 @@
     "chalk": "^5.4.1"
   },
   "version": "0.0.2",
-  "repository":"https://github.com/iglu-sh/logger",
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://npm.pkg.github.com"
-  }
+  "repository":"https://github.com/iglu-sh/logger"
 }
