--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "npx tsc"
   },
-  "version": "v1.0.2-3",
+  "version": "v1.0.3",
   "repository": "https://github.com/iglu-sh/logger",
   "publishConfig": {
     "access": "public",
